* Display invoices in list view in different colors according to state

Version 1.3 - 2015-01-22
* Add invoice line details

Version 1.2 - 2014-07-01
* Changelog file creation