@@ -1,3 +1,4 @@
+* Add invoice dates to description for contract insurance invoices
 * Display invoices in list view in different colors according to state
 
 Version 1.3 - 2015-01-22
